--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,7 +8,7 @@
 
 html,
 body {
-  min-height: 100%;
+  min-height: 100vh;
   max-width: 100%;
   line-height: 1.5;
   font-size: 62.5%;
@@ -15,4 +17,9 @@ body {
 a {
   text-decoration: none;
   color: #000000;
+}
+
+ul,
+li {
+  list-style: none;
 }
